source of gerating backups

--- a/pacman/Readme
+++ b/pacman/Readme
@@ -1,1 +1,3 @@
-installed application back up folder
+$installed application back up folder
+#sudo pacman -Qqe > pkglist.txt
+sudo pacman -S - < pkglist.txt
